--- a/application/static/styles/_variables.scss
+++ b/application/static/styles/_variables.scss
@@ -3,13 +3,14 @@
 $text-background:#25252571;
 
 $text-color1: white;
-$text-color2:#504f4f;
 $text-hover:#252525;
 
 $background:#f4f4f4;
 $nav-background: orange;
 $footer-color: white;
 $footer-background:#2b2b2b;
+$modal-color:#504f4f;
+
 
 
 $background1: white;
@@ -30,7 +31,7 @@ $font: 'Open Sans', sans-serif;
 }
 
 @mixin lists{
-  color: $text-color2;
+  color: $modal-color;
   background: $background2;
   margin: auto;
   max-width: 500px;
