--- a/application/static/styles/_home.scss
+++ b/application/static/styles/_home.scss
@@ -15,6 +15,16 @@ main{
       @include center;
       text-align: center;
 
+      .carousel{
+        width: 80%;
+        padding: 0;
+        margin: auto;
+
+        .carousel-inner{
+          border-radius: 10px;
+        }
+      }
+
       .text{
         margin-top: 3vh;
 
@@ -36,7 +46,7 @@ main{
       position: absolute;
       display: block;
       color: black;
-      width: 240px;
+      width: 50%;
       height: 80px;
       font-size: 24px;
     }
@@ -44,9 +54,9 @@ main{
 
   .stick{
     @include center;
-    background-color: black;
+    background-color: $footer-background;
     border-radius: 20px;
-    width: 15px;
+    width: 8px;
   }
 
   modal{
