--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -5,10 +5,39 @@
     
     <div class="block1">
 
+        <!--****************************
+        GREETING
+        ********************************-->
         <div class="greeting">
-            <img class="img-fluid" 
-                src="{{ url_for('static',filename ='img/introSlider/building.jpg') }}"
-                alt="building">
+            
+            <div id="greetingCarousel" class="carousel slide">
+                <div class="carousel-inner">
+
+                    <!-- Object to activate carousel -->
+                    {% set carousel = { 'active':True } %}
+
+                    {% for image in images.greeting %}
+                  
+                        <div class="carousel-item {{ 'active' if carousel.active else '' }}">
+                            <img src="{{url_for('static',filename=images.greeting[image])}}" class="d-block w-100 img-fluid" alt="...">
+                        </div>
+
+                     <!-- Update caraousel object -->
+                    {% if carousel.update({'active': False}) %} {% endif %}
+    
+                    {% endfor %}
+
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#greetingCarousel" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#greetingCarousel" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+
             <div class="text">    
                 <h1>{{data.carousel.title}}</h1>
                 <h2>{{data.carousel.slogan}}</h2>
