--- a/application/static/styles/style.css
+++ b/application/static/styles/style.css
@@ -54,7 +54,6 @@ main .stick {
 main modal {
   display: none;
   background-color: white;
-  border-radius: 20px;
   overflow: scroll;
   position: absolute;
   top: 50%;
@@ -80,6 +79,27 @@ main modal #about .text p {
 main modal #projects {
   display: none;
 }
+main modal #projects .title {
+  text-align: center;
+}
+main modal #projects .title h2 {
+  margin: 0;
+}
+main modal #projects .projectsComponent {
+  position: relative;
+}
+main modal #projects .projectsComponent #projectsList {
+  position: absolute;
+  background-color: aqua;
+}
+main modal #projects .projectsComponent #projectsPreview {
+  position: absolute;
+  background-color: red;
+}
+main modal #projects .projectsComponent #projectView {
+  position: absolute;
+  background-color: blue;
+}
 main modal #services {
   display: none;
 }
@@ -90,35 +110,6 @@ main modal #closeModal {
   position: absolute;
   top: 10px;
   left: 10px;
-}
-
-.header-phone {
-  height: 9vh;
-  overflow: hidden;
-  position: relative;
-}
-.header-phone img {
-  height: 95vh;
-  position: absolute;
-  left: -66%;
-  z-index: 0;
-}
-.header-phone .text {
-  text-align: center;
-  position: absolute;
-  width: 230px;
-  top: 80%;
-  left: 50%;
-  transform: translate(-50%, 0);
-  color: white;
-  z-index: 1;
-}
-.header-phone .text h1 {
-  font-size: medium;
-}
-
-.services-projects {
-  background: #f1f1f1;
 }
 
 .services {
@@ -141,23 +132,6 @@ main modal #closeModal {
   text-align: justify;
   margin-top: 2rem;
   margin-bottom: 0;
-}
-
-.projects {
-  color: #504f4f;
-  background: #f1f1f1;
-  margin: auto;
-  max-width: 500px;
-}
-.projects .title {
-  background: #ffe442;
-  text-align: center;
-}
-.projects .modal-footer {
-  display: block !important;
-}
-.projects .modal-footer p {
-  margin: 0;
 }
 
 .contact {
