--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -3,13 +3,11 @@
 
 <main>
     
+    <!--****************************
+    GREETING
+    ********************************-->
     <div class="block1">
-
-        <!--****************************
-        GREETING
-        ********************************-->
         <div class="greeting">
-            
             <div id="greetingCarousel" class="carousel slide">
                 <div class="carousel-inner">
 
@@ -45,6 +43,11 @@
         </div>
 
     </div>
+
+    <!--****************************
+    MAIN BUTTONS
+    ********************************-->
+
     <div class="block2">
 
         <button id="aboutButton" 
@@ -73,7 +76,7 @@
         <!--****************************
         ABOUT
         ********************************-->
-        <div id="about" class="about row">
+        <div id="about">
 
             <!-- About - Carousel -->
 
@@ -120,104 +123,27 @@
         <!--**************************** 
             PROJECTS 
         ********************************-->
-        <ul id="projects" class="projects list-group pb-3">
+        <div id="projects">
+            <div class="title">
+                <h2>{{data.projects.title}}</h2>
+            </div>
 
-            <!-- Title -->
-            <a data-toggle="collapse" href="#projects-collapse">
+            <div class="projectsComponent">
+                <div id="projectsList">
+                    {% for project in data.projects.list %}
 
-                <li class="list-group-item title"><h2><strong>{{data.projects.title}}</strong></h2></li>
-
-            </a>
-
-            {% for project in data.projects.list%}
-
-                <!-- Modal List -->
-
-                <a  
-                    id="projects-collapse"
-                    class="collapse"
-                    data-toggle="modal" 
-                    href="#project-modal{{project.id}}">
-
-                    <li class="list-group-item"><strong>{{project.name}}</strong></li>
-
-                </a>
-
-                <!--  Modal view -->
-                <div class="modal fade" id="project-modal{{project.id}}" tabindex="-1" role="dialog">
-                    <div class="modal-dialog" role="document">
-                        <div class="modal-content">
-
-                            <!-- Modal content -->
-
-                            <div class="modal-header">
-
-                                <!-- Title -->
-                                <h5 class="modal-title">{{project.name}}</h5>
-
-                                <!-- Close button -->
-                                <button type="button" class="close" data-dismiss="modal">
-                                    <span>&times;</span>
-                                </button>
-
-                            </div>
-
-                            <div class="modal-body">
-
-                                <!-- Carousel -->
-
-                                <div id="projectsView-{{project.id}}" class="carousel slide" data-ride="carousel">
-                                    <div class="carousel-inner">
-
-                                        {% set carousel = {'active': True } %}
-
-                                        {% for img in images[project.id] %}
-
-                                        <div class="carousel-item {{ 'active' if carousel.active else '' }}">
+                        <ul>
+                            <li>{{project.name}}</li>
+                        </ul>
         
-                                            <img    class="d-block w-100"
-                                                    src="{{ url_for(   'static',
-                                                                        filename='/'.join([ 'img', 
-                                                                                            'projects',
-                                                                                            project.id,
-                                                                                            img
-                                                                                            ]))}} ">
-                                        </div>
-
-                                        {% if carousel.update({'active': False}) %} {% endif %}
-                                        
-                                                                                            
-                                        {% endfor %}
-
-                                    </div>
-
-                                    <a class="carousel-control-prev" href="#projectsView-{{project.id}}" role="button" data-slide="prev">
-                                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                        <span class="sr-only">Previous</span>
-                                    </a>
-                                    <a class="carousel-control-next" href="#projectsView-{{project.id}}" role="button" data-slide="next">
-                                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                        <span class="sr-only">Next</span>
-                                    </a>
-                                    </div>
-
-
-                            </div>
-
-                            <div class="modal-footer">
-                                
-                                <p><strong>Descripción:</strong> {{project.description}}</p>
-                                
-                                <p><strong>Cliente:</strong> {{project.client}}</p>
-                                
-                                <p><strong>Lugar:</strong> {{project.location}} </p>
-
-                            </div>
-                        </div>
-                    </div>
+                    {% endfor %}
                 </div>
-            {% endfor %}
-        </ul>
+                <div id="projectsPreview"> preview</div>
+                <div id="projectView"> view</div>
+            </div>
+            <div></div>
+            
+        </div>
 
         <!--****************************
                 SERVICES 
