--- a/application/static/styles/_home.scss
+++ b/application/static/styles/_home.scss
@@ -99,10 +99,32 @@ main{
         #projectsList{
           position: absolute;
           background-color: aqua;
+          ul{
+            list-style-type: none;
+            padding: 0;
+            margin-top: 10px;
+            margin-left: 8px;
+            li{
+              margin-bottom: 8px;
+              button{
+                background-color: transparent;
+                border-style: none;
+              }
+            }
+          }
         }
         #projectsPreview{
+          overflow: scroll;
           position: absolute;
           background-color: red;
+          display: flex;
+
+          align-items: center;
+
+          .thumbnail{
+            border-style: solid;
+            border-left: none;
+          }
         }
         #projectView{
           position: absolute;
@@ -118,7 +140,7 @@ main{
     #contact{
       display: none;
     }
-    
+
     #closeModal{
       position: absolute;
       top: 10px;
