--- a/application/static/styles/style.css
+++ b/application/static/styles/style.css
@@ -92,9 +92,29 @@ main modal #projects .projectsComponent #projectsList {
   position: absolute;
   background-color: aqua;
 }
+main modal #projects .projectsComponent #projectsList ul {
+  list-style-type: none;
+  padding: 0;
+  margin-top: 10px;
+  margin-left: 8px;
+}
+main modal #projects .projectsComponent #projectsList ul li {
+  margin-bottom: 8px;
+}
+main modal #projects .projectsComponent #projectsList ul li button {
+  background-color: transparent;
+  border-style: none;
+}
 main modal #projects .projectsComponent #projectsPreview {
+  overflow: scroll;
   position: absolute;
   background-color: red;
+  display: flex;
+  align-items: center;
+}
+main modal #projects .projectsComponent #projectsPreview .thumbnail {
+  border-style: solid;
+  border-left: none;
 }
 main modal #projects .projectsComponent #projectView {
   position: absolute;
