--- a/application/static/styles/style.scss
+++ b/application/static/styles/style.scss
@@ -5,11 +5,16 @@
 
 // root
 html{
+  position: relative;
   background-color: $background;
   font-family: $font;
   body {
   @include shadow;
   }
+}
+
+body{
+  position: relative !important;
 }
 
 // bootstrap classes
