--- a/application/static/styles/style.css
+++ b/application/static/styles/style.css
@@ -1,55 +1,35 @@
 main {
-  position: relative;
+  background-color: orange;
   display: flex !important;
 }
-main .block1 {
-  background-color: orange;
-  position: relative;
-}
-main .block1 .greeting {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+main .greeting {
+  padding: 30px;
   text-align: center;
 }
-main .block1 .greeting .carousel {
+main .greeting .carousel {
   width: 80%;
   padding: 0;
   margin: auto;
 }
-main .block1 .greeting .carousel .carousel-inner {
+main .greeting .carousel .carousel-inner {
   border-radius: 10px;
 }
-main .block1 .greeting .text {
+main .greeting .text {
   margin-top: 3vh;
 }
-main .block1 .greeting .text h1 {
+main .greeting .text h1 {
   font-size: 20px;
 }
-main .block1 .greeting .text h2 {
+main .greeting .text h2 {
   font-size: 16px;
 }
-main .block2 {
-  background-color: orange;
-  position: relative;
-}
-main .block2 button {
-  position: absolute;
-  display: block;
+main .mainButtons button {
   color: black;
-  width: 50%;
-  height: 80px;
   font-size: 24px;
 }
 main .stick {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   background-color: #2b2b2b;
   border-radius: 20px;
-  width: 8px;
 }
 main modal {
   display: none;
@@ -83,6 +63,10 @@ main modal #projects .title {
   text-align: center;
 }
 main modal #projects .title h2 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   margin: 0;
 }
 main modal #projects .projectsComponent {
@@ -106,11 +90,11 @@ main modal #projects .projectsComponent #projectsList ul li button {
   border-style: none;
 }
 main modal #projects .projectsComponent #projectsPreview {
-  overflow: scroll;
   position: absolute;
-  background-color: red;
   display: flex;
+  overflow: scroll;
   align-items: center;
+  background-color: red;
 }
 main modal #projects .projectsComponent #projectsPreview .thumbnail {
   border-style: solid;
@@ -273,11 +257,16 @@ footer {
 }
 
 html {
+  position: relative;
   background-color: #f4f4f4;
   font-family: "Open Sans", sans-serif;
 }
 html body {
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+}
+
+body {
+  position: relative !important;
 }
 
 .container {
