--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -7,38 +7,40 @@
     GREETING
     ********************************-->
     
-    <div class="greeting">
-        <div id="greetingCarousel" class="carousel slide">
-            <div class="carousel-inner">
+    <div class="block1">
+        <div class="greeting">
+            <div id="greetingCarousel" class="carousel slide">
+                <div class="carousel-inner">
 
-                <!-- Object to activate carousel -->
-                {% set carousel = { 'active':True } %}
+                    <!-- Object to activate carousel -->
+                    {% set carousel = { 'active':True } %}
 
-                {% for image in images.greeting %}
-                
-                    <div class="carousel-item {{ 'active' if carousel.active else '' }}">
-                        <img src="{{images.greeting[image]}}" class="d-block w-100 img-fluid" alt="...">
-                    </div>
+                    {% for image in images.greeting %}
+                    
+                        <div class="carousel-item {{ 'active' if carousel.active else '' }}">
+                            <img src="{{images.greeting[image]}}" class="d-block w-100 img-fluid" alt="...">
+                        </div>
 
-                    <!-- Update caraousel object -->
-                {% if carousel.update({'active': False}) %} {% endif %}
+                        <!-- Update caraousel object -->
+                    {% if carousel.update({'active': False}) %} {% endif %}
 
-                {% endfor %}
+                    {% endfor %}
 
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#greetingCarousel" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#greetingCarousel" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#greetingCarousel" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#greetingCarousel" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-        </div>
 
-        <div class="text">    
-            <h1>{{data.carousel.title}}</h1>
-            <h2>{{data.carousel.slogan}}</h2>
+            <div class="text">    
+                <h1>{{data.carousel.title}}</h1>
+                <h2>{{data.carousel.slogan}}</h2>
+            </div>
         </div>
     </div>
 
@@ -46,28 +48,30 @@
     MAIN BUTTONS
     ********************************-->
 
-    <div class="mainButtons">
+    <div class="block2">
+        <div class="mainButtons">
 
-        <button id="aboutButton" 
-                class="glow-on-hover">
-                {{data.about.title}}
-        </button>
-        <button id="projectsButton" 
-                class="glow-on-hover">
-                {{data.projects.title}}
-        </button>
-        <button id="servicesButton" 
-                class="glow-on-hover">
-                {{data.services.title}}
-        </button>
-        <button id="contactButton" 
-                class="glow-on-hover">
-                {{data.contact.title}}
-        </button>
-
+            <button id="aboutButton" 
+                    class="glow-on-hover">
+                    {{data.about.title}}
+            </button>
+            <button id="projectsButton" 
+                    class="glow-on-hover">
+                    {{data.projects.title}}
+            </button>
+            <button id="servicesButton" 
+                    class="glow-on-hover">
+                    {{data.services.title}}
+            </button>
+            <button id="contactButton" 
+                    class="glow-on-hover">
+                    {{data.contact.title}}
+            </button>
+    
+        </div>
     </div>
 
-    <div class="stick"></div>
+    <div class="stick"></div> 
     
     <modal>
        
@@ -257,6 +261,7 @@
     </modal>
 </main>
 <script> const projectImages = {{ images.projects|tojson }} </script>
+<script src="{{ url_for('static', filename='js/jQuery.js') }}"></script>
 <script src="{{ url_for('static', filename='js//homeEvents.js')}}"></script>
 
 {% endblock %}
