--- a/application/static/styles/_home.scss
+++ b/application/static/styles/_home.scss
@@ -1,3 +1,5 @@
+// Needs Work
+
 // Utilities
 @import "variables";
 
@@ -6,6 +8,7 @@
 main{
   background-color: orange;
   display: flex;
+  position: relative;
 
   .block1{
     position: relative;
@@ -70,7 +73,7 @@ main{
     width: 8px;
   }
 
-  modal{
+  .modal{
     display: none;
     background-color: white;
     overflow: scroll;
@@ -241,4 +244,3 @@ main{
     max-width: 400px;
   }  
 }
-
