--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -76,7 +76,9 @@
         </div>
     </nav>
 
-    <!-- Inheritance - PARENT -->
+    <!--****************************
+    CONTENT
+    ********************************-->
 
     {% block content %} {% endblock %}
 
@@ -95,5 +97,5 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" 
         crossorigin="anonymous"></script>
-<!-- script-->
-<script src="{{ url_for('static', filename='js/sizeComponents.js') }}"></script>
+<!-- Layouts-->
+<script src="{{ url_for('static', filename='js/componentsLayout.js') }}"></script>
