--- a/application/static/styles/style.css
+++ b/application/static/styles/style.css
@@ -67,6 +67,21 @@ main .modal {
   overflow: scroll;
   position: absolute;
 }
+main .modal .title {
+  text-align: center;
+  background: #ffbc11;
+  text-transform: uppercase;
+  height: 42px;
+  position: relative;
+}
+main .modal .title h2 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 18px;
+  margin: 0;
+}
 main .modal #about {
   display: none;
   padding: 10px 0;
@@ -85,21 +100,6 @@ main .modal #about .text p {
 }
 main .modal #projects {
   display: none;
-}
-main .modal #projects .title {
-  text-align: center;
-  background: #ffbc11;
-  text-transform: uppercase;
-  height: 42px;
-  position: relative;
-}
-main .modal #projects .title h2 {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 18px;
-  margin: 0;
 }
 main .modal #projects .projectsComponent {
   position: relative;
