--- a/application/static/styles/_services.scss
+++ b/application/static/styles/_services.scss
@@ -1,7 +1,39 @@
 @import "variables";
 
-.modal{
-    #services{
-        
+#services{
+    display: none;
+
+    .cards
+    {
+        margin-top:30px;
+        display: flex;
+        flex-wrap: wrap;
+
+        .grid{
+            padding-left: 30px;
+
+            .card{
+                cursor: pointer;
+                @include shadow;
+                margin-bottom: 30px;
+
+                h3{
+                    text-align: center;
+                    font-size: 18px;
+                    text-transform: uppercase;
+                    margin-top: 8px;
+                }
+
+                p{
+                    text-align: justify;
+                    display: none;
+                    padding-top: 8px;
+                    margin-left: 8px;
+                    margin-right: 8px;
+                    border-top: solid;
+                    border-top-color: rgb(194, 194, 194);
+                }
+            }
+        }
     }
 }
